[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/resources/main_theme.theme" type="Theme" id=1]
[ext_resource path="res://scenes/file_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/main.gd" type="Script" id=3]
[ext_resource path="res://scenes/asset_grid/asset_grid.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
margin_left = 6.0
margin_top = 4.0
margin_right = 1018.0
margin_bottom = 596.0

[node name="MenuBar" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
margin_right = 1012.0
margin_bottom = 22.0

[node name="FileMenu" type="MenuButton" parent="MainPanel/VBoxContainer/MenuBar"]
margin_right = 35.0
margin_bottom = 22.0
text = "File"
script = ExtResource( 2 )

[node name="AssetGrid" parent="MainPanel/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 1012.0
margin_bottom = 592.0

[node name="NewGalaxyDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.914
margin_top = -178.416
margin_right = 303.086
margin_bottom = 210.584
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
window_title = "Select an empty folder for the new galaxy"
resizable = true
mode_overrides_title = false
mode = 2
access = 2
show_hidden_files = true
current_dir = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy"
current_path = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FolderNotEmptyNotification" type="AcceptDialog" parent="NewGalaxyDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -295.0
margin_top = -186.5
margin_right = 295.0
margin_bottom = 156.5
popup_exclusive = true
window_title = ""
dialog_text = "The selected folder is not empty. Please select an empty folder."

[node name="LoadGalaxyDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.914
margin_top = -178.416
margin_right = 303.086
margin_bottom = 210.584
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
window_title = "Select a galaxy.json file."
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "galaxy.json" )
show_hidden_files = true
current_dir = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy"
current_path = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddAssetsDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.914
margin_top = -178.416
margin_right = 303.086
margin_bottom = 210.584
rect_min_size = Vector2( 600, 300 )
popup_exclusive = true
window_title = "Select asset files."
resizable = true
mode_overrides_title = false
mode = 1
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
show_hidden_files = true
current_dir = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy"
current_path = "/media/Data/WybeData/Projects/Godot/Programs/AssetGalaxy/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="add_assets_pressed" from="MainPanel/VBoxContainer/MenuBar/FileMenu" to="." method="_open_add_assets_dialog"]
[connection signal="load_galaxy_pressed" from="MainPanel/VBoxContainer/MenuBar/FileMenu" to="." method="_open_load_galaxy_dialog"]
[connection signal="new_galaxy_pressed" from="MainPanel/VBoxContainer/MenuBar/FileMenu" to="." method="_open_new_galaxy_dialog" binds= [ "res://" ]]
[connection signal="dir_selected" from="NewGalaxyDialog" to="." method="_on_NewGalaxyDialog_dir_selected"]
[connection signal="file_selected" from="LoadGalaxyDialog" to="." method="_load_galaxy"]
[connection signal="files_selected" from="AddAssetsDialog" to="." method="_add_assets"]
